<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.xafero</groupId>
    <artifactId>jnetcall-java-tests</artifactId>
    <version>1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.example</groupId>
            <artifactId>alien0-java</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.xafero</groupId>
            <artifactId>jnetbase-java</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.xafero</groupId>
            <artifactId>jnetproto-java</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.xafero.utils</groupId>
            <artifactId>javaenums</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.xafero</groupId>
            <artifactId>jnetcall-java-common</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.xafero</groupId>
            <artifactId>jnethotel-java</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.xafero</groupId>
            <artifactId>jnetcall-java-inproc</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.xafero</groupId>
            <artifactId>jnetcall-java-stdio</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.example</groupId>
            <artifactId>aliens-java</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
		<plugins>            
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
				<executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
				</executions>
			</plugin>
		</plugins>
	</build>
    
</project>
